# Release Notes

## 0.1.0-SNAPSHOT

* Added stub telegram bot
* Added Spring Boot to project

## 0.2.0-SNAPSHOT

* Added START, STOP and HELP commands
* Add Service for commands processing
