@@ -10,7 +10,7 @@
     </parent>
     <groupId>ru.mulashkin</groupId>
     <artifactId>HHTB</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <name>HHTB</name>
     <description>Telegram bot for automation of job searching</description>
     <properties>
