@@ -6,5 +6,4 @@ import org.springframework.boot.test.context.SpringBootTest;
 @SpringBootTest
 class HhtbApplicationTests {
 
-
 }
