@@ -1,0 +1,44 @@
+package ru.mulashkin.hhtb.command;
+
+import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
+import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
+import org.telegram.telegrambots.meta.api.objects.Message;
+import org.telegram.telegrambots.meta.api.objects.Update;
+import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
+import ru.mulashkin.hhtb.bot.HHFindNewJobBot;
+import ru.mulashkin.hhtb.service.SendBotMessageService;
+import ru.mulashkin.hhtb.service.SendBotMessageServiceImpl;
+
+import static org.junit.jupiter.api.Assertions.*;
+
+abstract class AbstractCommandTest {
+    protected HHFindNewJobBot bot = Mockito.mock(HHFindNewJobBot.class);
+    protected SendBotMessageService sendBotMessageService = new SendBotMessageServiceImpl(bot);
+
+    abstract String getCommandName();
+
+    abstract String getCommandMessage();
+
+    abstract Command getCommand();
+
+    @Test
+    public void shouldProperlyExecuteCommand() throws TelegramApiException {
+        Long chatId = 1234567890L;
+
+        Update update = new Update();
+        Message message = Mockito.mock(Message.class);
+        Mockito.when(message.getChatId()).thenReturn(chatId);
+        Mockito.when(message.getText()).thenReturn(getCommandName());
+        update.setMessage(message);
+
+        SendMessage sendMessage = new SendMessage();
+        sendMessage.setChatId(chatId.toString());
+        sendMessage.setText(getCommandMessage());
+        sendMessage.enableHtml(true);
+
+        getCommand().execute(update);
+
+        Mockito.verify(bot).execute(sendMessage);
+    }
+}
