@@ -9,4 +9,5 @@
 
 * Added START, STOP and HELP commands
 * Add Service for commands processing
+* Implemented Command Pattern for handling Telegram Bot command
 
